updated frontend templates

--- a/frontend/templates/home/django-material-kit/sop-bioinformatics.html
+++ b/frontend/templates/home/django-material-kit/sop-bioinformatics.html
@@ -18,8 +18,8 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">Your title here</h1>
-            <h3 class="text-white">Subtitle</h3>
+            <h1 class="text-white">Bioinformatics</h1>
+            <p class="lead mb-4 text-white opacity-8">Standard Operating Procedures</p>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
   <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
     <div class="container">
       <div class="section text-center">
-        <h2 class="title">Your main section here</h2>
+        <h2 class="title">Content coming soon...</h2>
       </div>
     </div>
   </div>
